# parca-agent

./: .gitmodules
rust/: Cargo.toml  build.rs
rust/proto/: buf.yaml
rust/src/: lib.rs  logger.rs  main.rs
rust/src/config/: cli.rs  file.rs  mod.rs
rust/src/metadata/: mod.rs
rust/src/metadata/providers/: mod.rs  system.rs
rust/src/metrics/: mod.rs  prometheus.rs
rust/src/reporter/: mod.rs
rust/src/reporter/grpc/: mod.rs
