[package]
name = "parca_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "~1.0.101"
async-trait = "~0.1.89"
clap = { version = "~4.5.58", features = ["derive"] }
prost = "~0.14"
serde = { version = "~1.0.228", features = ["derive"] }
sysinfo = "~0.38"
tokio = { version = "~1.49", features = ["macros", "rt-multi-thread"] }
tonic = "~0.14.4"

[build-dependencies]
tonic-prost-build = "~0.14.4"
